--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 click==8.0.1
 colorama==0.4.4
+dominate==2.6.0
 Flask==2.0.1
+Flask-Bootstrap==3.3.7.1
 importlib-metadata==4.4.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 typing-extensions==3.10.0.0
+visitor==0.1.3
 Werkzeug==2.0.1
 zipp==3.4.1
