--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ colorama==0.4.4
 dominate==2.6.0
 Flask==2.0.1
 Flask-Bootstrap==3.3.7.1
+Flask-Moment==0.11.0
+Flask-WTF==0.15.1
 importlib-metadata==4.4.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
@@ -10,4 +12,5 @@ MarkupSafe==2.0.1
 typing-extensions==3.10.0.0
 visitor==0.1.3
 Werkzeug==2.0.1
+WTForms==2.3.3
 zipp==3.4.1
