--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ importlib-metadata==4.4.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+python-dotenv==0.20.0
 typing-extensions==3.10.0.0
 visitor==0.1.3
 Werkzeug==2.0.1
